@startuml
'https://plantuml.com/class-diagram
hide circle


class StorableList{
    load()
    save()
    {abstract} parse(s:String)
    {abstract} unparse(t:T)

}

class ActivityList{}
class ActivityGoalLIst{}
class DietList{}
class DietGoalList{}
class SleepList{}
class SleepGoalList{

}
interface Findable{
    find(date: LocalDate): ArrayList<T>
}
class Data{
    getInstance(): Data
    load()
    save()
}

Findable <|.. ActivityList
Findable <|.. DietList
Findable <|.. SleepList

StorableList <|-- ActivityList
StorableList <|-- DietList
StorableList <|-- SleepList
StorableList <|-- ActivityGoalLIst
StorableList <|-- DietGoalList
StorableList <|-- SleepGoalList

Data --u- ActivityList
Data --u- DietList
Data --u- SleepList
Data --u- ActivityGoalLIst
Data --u- DietGoalList
Data --u- SleepGoalList





@enduml